Remove duplicate video containers in morning_yoga.html and it my by me

--- a/morning_yoga.html
+++ b/morning_yoga.html
@@ -45,40 +45,16 @@
     </div>
 
     <div class="video-container">
-        <iframe 
-            id="morningYogaVideo"
-            width="560" 
-            height="315" 
-            src="https://www.youtube.com/embed/PTotFu9NJ6I?enablejsapi=1"
-            frameborder="0" 
-            allowfullscreen>
-        </iframe>
+       <iframe width="560" height="315" src="https://www.youtube.com/embed/g_tea8ZNk5A?si=ljW3XZN6K2HoaXt3" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         <p></p>
     </div>
 
     <div class="video-container">
-        <iframe 
-            id="morningYogaVideo"
-            width="560" 
-            height="315" 
-            src="https://www.youtube.com/embed/PTotFu9NJ6I?enablejsapi=1"
-            frameborder="0" 
-            allowfullscreen>
-        </iframe>
+       <iframe width="560" height="315" src="https://www.youtube.com/embed/6INXj5B5uqE?si=Vou1IJih47KbOl7v" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         <p></p>
     </div>
 
-    <div class="video-container">
-        <iframe 
-            id="morningYogaVideo"
-            width="560" 
-            height="315" 
-            src="https://www.youtube.com/embed/PTotFu9NJ6I?enablejsapi=1"
-            frameborder="0" 
-            allowfullscreen>
-        </iframe>
-        <p></p>
-    </div>
+     
 
     <!-- Back link -->
     <button><a href="navigation.html">⬅ Back to Sections</a></button>
@@ -92,3 +68,4 @@
 </body>
 
 </html>
+
